# web-server

./: .gitignore  CMakeLists.txt  build
src/: main.cpp
src/entity/common/: http.cpp  http.h  system.h
src/entity/common/URI/: uri.h
src/entity/http_server/: server.cpp  server.h
src/entity/request/: request.cpp  request.h
src/entity/response/: response.cpp  response.h
src/entity/socket_server/: server.cpp  server.h
src/utils/: string.h
src/utils/algo/: search.h
src/utils/buffer/: buffer.cpp  buffer.h
src/utils/color/: color.cpp  color.h  color_helper.h
src/utils/logger/: logger.cpp  logger.h
